--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^4.7.8",
     "body-parser": "^1.12.0",
     "events": "^1.0.2",
+    "express": "^4.12.3",
     "jsx-loader": "^0.12.2",
     "koa": "^0.18.1",
     "koa-body": "^1.1.0",
@@ -28,6 +29,7 @@
     "passport-twitter": "^1.0.3",
     "react": "^0.13.0",
     "rethinkdbdash": "^1.16.13",
+    "twit": "^1.1.20",
     "webpack": "^1.7.2"
   },
   "devDependencies": {
