--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parallelshell 'webpack -w' 'nodemon index.js'"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
