--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parallelshell 'webpack -w' 'nodemon index.js'"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,7 +25,9 @@
     "passport": "^0.2.1",
     "passport-twitter": "^1.0.3",
     "react": "^0.13.0",
-    "rethinkdbdash": "^1.16.13"
+    "rethinkdbdash": "^1.16.13",
+    "twit": "^1.1.20",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "babel": "^4.7.8",
