--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-twitter": "^1.0.3",
     "react": "^0.13.0",
     "rethinkdbdash": "^1.16.13",
+    "socket.io": "^1.3.5",
     "twit": "^1.1.20"
   },
   "devDependencies": {
